y.output
Terminaux inutilisés dans la grammaire

   affect
   ident
   eg


État 26 conflits: 11 décalage/réduction
État 62 conflits: 1 décalage/réduction


Grammaire

    0 $accept: PROGRAM $end

    1 PROGRAM: INSTR pt_virg pt_virg

    2 INSTR: print_int EXPR
    3      | print_string string
    4      | _if EXPR T J _then INSTR
    5      | _if EXPR T J _then INSTR _else G M INSTR
    6      | _while M EXPR T J _do SEQUENCE G _done
    7      | _begin SEQUENCE _end
    8      | _begin _end

    9 SEQUENCE: INSTR
   10         | SEQUENCE pt_virg INSTR

   11 EXPR: integer
   12     | true
   13     | false
   14     | EXPR inf EXPR
   15     | EXPR inf_eg EXPR
   16     | EXPR sup EXPR
   17     | EXPR sup_eg EXPR
   18     | EXPR eq EXPR
   19     | EXPR and EXPR
   20     | EXPR or EXPR
   21     | not EXPR
   22     | EXPR plus EXPR
   23     | EXPR moins EXPR
   24     | EXPR mult EXPR
   25     | EXPR divi EXPR
   26     | par_g EXPR par_d
   27     | moins EXPR
   28     | read_int par_g par_d

   29 T: /* vide */

   30 J: /* vide */

   31 M: /* vide */

   32 G: /* vide */


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
integer (258) 11
print_int (259) 2
affect (260)
ident (261)
pt_virg (262) 1 10
plus (263) 22
par_g (264) 26 28
par_d (265) 26 28
moins (266) 23 27
mult (267) 24
divi (268) 25
true (269) 12
false (270) 13
inf (271) 14
inf_eg (272) 15
sup (273) 16
sup_eg (274) 17
eg (275)
eq (276) 18
not (277) 21
and (278) 19
or (279) 20
string (280) 3
_if (281) 4 5
_then (282) 4 5
_else (283) 5
_while (284) 6
_do (285) 6
_done (286) 6
read_int (287) 28
_begin (288) 7 8
_end (289) 7 8
print_string (290) 3
umoins (291)


Non-terminaux, suivis des règles où ils apparaissent

$accept (37)
    à gauche: 0
PROGRAM (38)
    à gauche: 1, à droite: 0
INSTR (39)
    à gauche: 2 3 4 5 6 7 8, à droite: 1 4 5 9 10
SEQUENCE (40)
    à gauche: 9 10, à droite: 6 7 10
EXPR (41)
    à gauche: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28,
    à droite: 2 4 5 6 14 15 16 17 18 19 20 21 22 23 24 25 26 27
T (42)
    à gauche: 29, à droite: 4 5 6
J (43)
    à gauche: 30, à droite: 4 5 6
M (44)
    à gauche: 31, à droite: 5 6
G (45)
    à gauche: 32, à droite: 5 6


état 0

    0 $accept: . PROGRAM $end

    print_int     décalage et aller à l'état 1
    _if           décalage et aller à l'état 2
    _while        décalage et aller à l'état 3
    _begin        décalage et aller à l'état 4
    print_string  décalage et aller à l'état 5

    PROGRAM  aller à l'état 6
    INSTR    aller à l'état 7


état 1

    2 INSTR: print_int . EXPR

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 15


état 2

    4 INSTR: _if . EXPR T J _then INSTR
    5      | _if . EXPR T J _then INSTR _else G M INSTR

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 16


état 3

    6 INSTR: _while . M EXPR T J _do SEQUENCE G _done

    $défaut  réduction par utilisation de la règle 31 (M)

    M  aller à l'état 17


état 4

    7 INSTR: _begin . SEQUENCE _end
    8      | _begin . _end

    print_int     décalage et aller à l'état 1
    _if           décalage et aller à l'état 2
    _while        décalage et aller à l'état 3
    _begin        décalage et aller à l'état 4
    _end          décalage et aller à l'état 18
    print_string  décalage et aller à l'état 5

    INSTR     aller à l'état 19
    SEQUENCE  aller à l'état 20


état 5

    3 INSTR: print_string . string

    string  décalage et aller à l'état 21


état 6

    0 $accept: PROGRAM . $end

    $end  décalage et aller à l'état 22


état 7

    1 PROGRAM: INSTR . pt_virg pt_virg

    pt_virg  décalage et aller à l'état 23


état 8

   11 EXPR: integer .

    $défaut  réduction par utilisation de la règle 11 (EXPR)


état 9

   26 EXPR: par_g . EXPR par_d

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 24


état 10

   27 EXPR: moins . EXPR

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 25


état 11

   12 EXPR: true .

    $défaut  réduction par utilisation de la règle 12 (EXPR)


état 12

   13 EXPR: false .

    $défaut  réduction par utilisation de la règle 13 (EXPR)


état 13

   21 EXPR: not . EXPR

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 26


état 14

   28 EXPR: read_int . par_g par_d

    par_g  décalage et aller à l'état 27


état 15

    2 INSTR: print_int EXPR .
   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR

    plus    décalage et aller à l'état 28
    moins   décalage et aller à l'état 29
    mult    décalage et aller à l'état 30
    divi    décalage et aller à l'état 31
    inf     décalage et aller à l'état 32
    inf_eg  décalage et aller à l'état 33
    sup     décalage et aller à l'état 34
    sup_eg  décalage et aller à l'état 35
    eq      décalage et aller à l'état 36
    and     décalage et aller à l'état 37
    or      décalage et aller à l'état 38

    $défaut  réduction par utilisation de la règle 2 (INSTR)


état 16

    4 INSTR: _if EXPR . T J _then INSTR
    5      | _if EXPR . T J _then INSTR _else G M INSTR
   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR

    plus    décalage et aller à l'état 28
    moins   décalage et aller à l'état 29
    mult    décalage et aller à l'état 30
    divi    décalage et aller à l'état 31
    inf     décalage et aller à l'état 32
    inf_eg  décalage et aller à l'état 33
    sup     décalage et aller à l'état 34
    sup_eg  décalage et aller à l'état 35
    eq      décalage et aller à l'état 36
    and     décalage et aller à l'état 37
    or      décalage et aller à l'état 38

    $défaut  réduction par utilisation de la règle 29 (T)

    T  aller à l'état 39


état 17

    6 INSTR: _while M . EXPR T J _do SEQUENCE G _done

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 40


état 18

    8 INSTR: _begin _end .

    $défaut  réduction par utilisation de la règle 8 (INSTR)


état 19

    9 SEQUENCE: INSTR .

    $défaut  réduction par utilisation de la règle 9 (SEQUENCE)


état 20

    7 INSTR: _begin SEQUENCE . _end
   10 SEQUENCE: SEQUENCE . pt_virg INSTR

    pt_virg  décalage et aller à l'état 41
    _end     décalage et aller à l'état 42


état 21

    3 INSTR: print_string string .

    $défaut  réduction par utilisation de la règle 3 (INSTR)


état 22

    0 $accept: PROGRAM $end .

    $défaut  accepter


état 23

    1 PROGRAM: INSTR pt_virg . pt_virg

    pt_virg  décalage et aller à l'état 43


état 24

   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR
   26     | par_g EXPR . par_d

    plus    décalage et aller à l'état 28
    par_d   décalage et aller à l'état 44
    moins   décalage et aller à l'état 29
    mult    décalage et aller à l'état 30
    divi    décalage et aller à l'état 31
    inf     décalage et aller à l'état 32
    inf_eg  décalage et aller à l'état 33
    sup     décalage et aller à l'état 34
    sup_eg  décalage et aller à l'état 35
    eq      décalage et aller à l'état 36
    and     décalage et aller à l'état 37
    or      décalage et aller à l'état 38


état 25

   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR
   27     | moins EXPR .

    plus    décalage et aller à l'état 28
    moins   décalage et aller à l'état 29
    mult    décalage et aller à l'état 30
    divi    décalage et aller à l'état 31
    inf     décalage et aller à l'état 32
    inf_eg  décalage et aller à l'état 33
    sup     décalage et aller à l'état 34
    sup_eg  décalage et aller à l'état 35
    eq      décalage et aller à l'état 36
    and     décalage et aller à l'état 37
    or      décalage et aller à l'état 38

    $défaut  réduction par utilisation de la règle 27 (EXPR)


état 26

   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   21     | not EXPR .
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR

    plus    décalage et aller à l'état 28
    moins   décalage et aller à l'état 29
    mult    décalage et aller à l'état 30
    divi    décalage et aller à l'état 31
    inf     décalage et aller à l'état 32
    inf_eg  décalage et aller à l'état 33
    sup     décalage et aller à l'état 34
    sup_eg  décalage et aller à l'état 35
    eq      décalage et aller à l'état 36
    and     décalage et aller à l'état 37
    or      décalage et aller à l'état 38

    plus      [réduction par utilisation de la règle 21 (EXPR)]
    moins     [réduction par utilisation de la règle 21 (EXPR)]
    mult      [réduction par utilisation de la règle 21 (EXPR)]
    divi      [réduction par utilisation de la règle 21 (EXPR)]
    inf       [réduction par utilisation de la règle 21 (EXPR)]
    inf_eg    [réduction par utilisation de la règle 21 (EXPR)]
    sup       [réduction par utilisation de la règle 21 (EXPR)]
    sup_eg    [réduction par utilisation de la règle 21 (EXPR)]
    eq        [réduction par utilisation de la règle 21 (EXPR)]
    and       [réduction par utilisation de la règle 21 (EXPR)]
    or        [réduction par utilisation de la règle 21 (EXPR)]
    $défaut  réduction par utilisation de la règle 21 (EXPR)


état 27

   28 EXPR: read_int par_g . par_d

    par_d  décalage et aller à l'état 45


état 28

   22 EXPR: EXPR plus . EXPR

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 46


état 29

   23 EXPR: EXPR moins . EXPR

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 47


état 30

   24 EXPR: EXPR mult . EXPR

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 48


état 31

   25 EXPR: EXPR divi . EXPR

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 49


état 32

   14 EXPR: EXPR inf . EXPR

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 50


état 33

   15 EXPR: EXPR inf_eg . EXPR

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 51


état 34

   16 EXPR: EXPR sup . EXPR

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 52


état 35

   17 EXPR: EXPR sup_eg . EXPR

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 53


état 36

   18 EXPR: EXPR eq . EXPR

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 54


état 37

   19 EXPR: EXPR and . EXPR

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 55


état 38

   20 EXPR: EXPR or . EXPR

    integer   décalage et aller à l'état 8
    par_g     décalage et aller à l'état 9
    moins     décalage et aller à l'état 10
    true      décalage et aller à l'état 11
    false     décalage et aller à l'état 12
    not       décalage et aller à l'état 13
    read_int  décalage et aller à l'état 14

    EXPR  aller à l'état 56


état 39

    4 INSTR: _if EXPR T . J _then INSTR
    5      | _if EXPR T . J _then INSTR _else G M INSTR

    $défaut  réduction par utilisation de la règle 30 (J)

    J  aller à l'état 57


état 40

    6 INSTR: _while M EXPR . T J _do SEQUENCE G _done
   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR

    plus    décalage et aller à l'état 28
    moins   décalage et aller à l'état 29
    mult    décalage et aller à l'état 30
    divi    décalage et aller à l'état 31
    inf     décalage et aller à l'état 32
    inf_eg  décalage et aller à l'état 33
    sup     décalage et aller à l'état 34
    sup_eg  décalage et aller à l'état 35
    eq      décalage et aller à l'état 36
    and     décalage et aller à l'état 37
    or      décalage et aller à l'état 38

    $défaut  réduction par utilisation de la règle 29 (T)

    T  aller à l'état 58


état 41

   10 SEQUENCE: SEQUENCE pt_virg . INSTR

    print_int     décalage et aller à l'état 1
    _if           décalage et aller à l'état 2
    _while        décalage et aller à l'état 3
    _begin        décalage et aller à l'état 4
    print_string  décalage et aller à l'état 5

    INSTR  aller à l'état 59


état 42

    7 INSTR: _begin SEQUENCE _end .

    $défaut  réduction par utilisation de la règle 7 (INSTR)


état 43

    1 PROGRAM: INSTR pt_virg pt_virg .

    $défaut  réduction par utilisation de la règle 1 (PROGRAM)


état 44

   26 EXPR: par_g EXPR par_d .

    $défaut  réduction par utilisation de la règle 26 (EXPR)


état 45

   28 EXPR: read_int par_g par_d .

    $défaut  réduction par utilisation de la règle 28 (EXPR)


état 46

   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   22     | EXPR . plus EXPR
   22     | EXPR plus EXPR .
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR

    mult  décalage et aller à l'état 30
    divi  décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 22 (EXPR)


état 47

   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   23     | EXPR moins EXPR .
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR

    mult  décalage et aller à l'état 30
    divi  décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 23 (EXPR)


état 48

   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   24     | EXPR mult EXPR .
   25     | EXPR . divi EXPR

    $défaut  réduction par utilisation de la règle 24 (EXPR)


état 49

   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR
   25     | EXPR divi EXPR .

    $défaut  réduction par utilisation de la règle 25 (EXPR)


état 50

   14 EXPR: EXPR . inf EXPR
   14     | EXPR inf EXPR .
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR

    plus   décalage et aller à l'état 28
    moins  décalage et aller à l'état 29
    mult   décalage et aller à l'état 30
    divi   décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 14 (EXPR)


état 51

   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   15     | EXPR inf_eg EXPR .
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR

    plus   décalage et aller à l'état 28
    moins  décalage et aller à l'état 29
    mult   décalage et aller à l'état 30
    divi   décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 15 (EXPR)


état 52

   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   16     | EXPR sup EXPR .
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR

    plus   décalage et aller à l'état 28
    moins  décalage et aller à l'état 29
    mult   décalage et aller à l'état 30
    divi   décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 16 (EXPR)


état 53

   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   17     | EXPR sup_eg EXPR .
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR

    plus   décalage et aller à l'état 28
    moins  décalage et aller à l'état 29
    mult   décalage et aller à l'état 30
    divi   décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 17 (EXPR)


état 54

   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   18     | EXPR eq EXPR .
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR

    plus    décalage et aller à l'état 28
    moins   décalage et aller à l'état 29
    mult    décalage et aller à l'état 30
    divi    décalage et aller à l'état 31
    inf     décalage et aller à l'état 32
    inf_eg  décalage et aller à l'état 33
    sup     décalage et aller à l'état 34
    sup_eg  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 18 (EXPR)


état 55

   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   19     | EXPR and EXPR .
   20     | EXPR . or EXPR
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR

    plus    décalage et aller à l'état 28
    moins   décalage et aller à l'état 29
    mult    décalage et aller à l'état 30
    divi    décalage et aller à l'état 31
    inf     décalage et aller à l'état 32
    inf_eg  décalage et aller à l'état 33
    sup     décalage et aller à l'état 34
    sup_eg  décalage et aller à l'état 35
    eq      décalage et aller à l'état 36

    $défaut  réduction par utilisation de la règle 19 (EXPR)


état 56

   14 EXPR: EXPR . inf EXPR
   15     | EXPR . inf_eg EXPR
   16     | EXPR . sup EXPR
   17     | EXPR . sup_eg EXPR
   18     | EXPR . eq EXPR
   19     | EXPR . and EXPR
   20     | EXPR . or EXPR
   20     | EXPR or EXPR .
   22     | EXPR . plus EXPR
   23     | EXPR . moins EXPR
   24     | EXPR . mult EXPR
   25     | EXPR . divi EXPR

    plus    décalage et aller à l'état 28
    moins   décalage et aller à l'état 29
    mult    décalage et aller à l'état 30
    divi    décalage et aller à l'état 31
    inf     décalage et aller à l'état 32
    inf_eg  décalage et aller à l'état 33
    sup     décalage et aller à l'état 34
    sup_eg  décalage et aller à l'état 35
    eq      décalage et aller à l'état 36
    and     décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 20 (EXPR)


état 57

    4 INSTR: _if EXPR T J . _then INSTR
    5      | _if EXPR T J . _then INSTR _else G M INSTR

    _then  décalage et aller à l'état 60


état 58

    6 INSTR: _while M EXPR T . J _do SEQUENCE G _done

    $défaut  réduction par utilisation de la règle 30 (J)

    J  aller à l'état 61


état 59

   10 SEQUENCE: SEQUENCE pt_virg INSTR .

    $défaut  réduction par utilisation de la règle 10 (SEQUENCE)


état 60

    4 INSTR: _if EXPR T J _then . INSTR
    5      | _if EXPR T J _then . INSTR _else G M INSTR

    print_int     décalage et aller à l'état 1
    _if           décalage et aller à l'état 2
    _while        décalage et aller à l'état 3
    _begin        décalage et aller à l'état 4
    print_string  décalage et aller à l'état 5

    INSTR  aller à l'état 62


état 61

    6 INSTR: _while M EXPR T J . _do SEQUENCE G _done

    _do  décalage et aller à l'état 63


état 62

    4 INSTR: _if EXPR T J _then INSTR .
    5      | _if EXPR T J _then INSTR . _else G M INSTR

    _else  décalage et aller à l'état 64

    _else     [réduction par utilisation de la règle 4 (INSTR)]
    $défaut  réduction par utilisation de la règle 4 (INSTR)


état 63

    6 INSTR: _while M EXPR T J _do . SEQUENCE G _done

    print_int     décalage et aller à l'état 1
    _if           décalage et aller à l'état 2
    _while        décalage et aller à l'état 3
    _begin        décalage et aller à l'état 4
    print_string  décalage et aller à l'état 5

    INSTR     aller à l'état 19
    SEQUENCE  aller à l'état 65


état 64

    5 INSTR: _if EXPR T J _then INSTR _else . G M INSTR

    $défaut  réduction par utilisation de la règle 32 (G)

    G  aller à l'état 66


état 65

    6 INSTR: _while M EXPR T J _do SEQUENCE . G _done
   10 SEQUENCE: SEQUENCE . pt_virg INSTR

    pt_virg  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 32 (G)

    G  aller à l'état 67


état 66

    5 INSTR: _if EXPR T J _then INSTR _else G . M INSTR

    $défaut  réduction par utilisation de la règle 31 (M)

    M  aller à l'état 68


état 67

    6 INSTR: _while M EXPR T J _do SEQUENCE G . _done

    _done  décalage et aller à l'état 69


état 68

    5 INSTR: _if EXPR T J _then INSTR _else G M . INSTR

    print_int     décalage et aller à l'état 1
    _if           décalage et aller à l'état 2
    _while        décalage et aller à l'état 3
    _begin        décalage et aller à l'état 4
    print_string  décalage et aller à l'état 5

    INSTR  aller à l'état 70


état 69

    6 INSTR: _while M EXPR T J _do SEQUENCE G _done .

    $défaut  réduction par utilisation de la règle 6 (INSTR)


état 70

    5 INSTR: _if EXPR T J _then INSTR _else G M INSTR .

    $défaut  réduction par utilisation de la règle 5 (INSTR)
